--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://qwertyq98.github.io/snake",
   "name": "snake",
   "private": true,
   "version": "0.0.0",
@@ -6,9 +7,11 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "gh-pages -d dist"
   },
   "devDependencies": {
-    "vite": "^5.1.0"
+    "vite": "^5.1.0",
+    "gh-pages": "^5.0.0"
   }
 }
